@@ -43,6 +43,8 @@ AC_OUTPUT([
 	data/Makefile
 	data/icons/Makefile
 	data/icons/16x16/Makefile
+	data/icons/24x24/Makefile
+	data/icons/32x32/Makefile
 	data/icons/48x48/Makefile
 	data/ui/Makefile
 	src/Makefile
