@@ -1,0 +1,3 @@
+appicondir	= $(datadir)/icons/hicolor/24x24/apps
+appicon_DATA	= revelation.png
+
