@@ -1,0 +1,3 @@
+appicondir	= $(datadir)/icons/hicolor/32x32/apps
+appicon_DATA	= revelation.png
+
