@@ -1,2 +1,2 @@
-SUBDIRS = 16x16 48x48
+SUBDIRS = 16x16 24x24 32x32 48x48
 
