@@ -12,6 +12,8 @@ Revelation changelog
 	* the .desktop file now uses the base icon name, so it is
 	looked up in the icon theme
 
+	* added new application icons
+
 2004-09-05  Erik Grinaker <erikg@codepoet.no>
 
 	* renamed data/images to data/icons
